# ch-implementing-cicd

./: .checkov.baseline  .gitignore  Makefile  README.md  app.py  cdk.json  pyproject.toml
.github/actions/: setup.yaml
.github/actions/deploy/: action.yaml
.github/actions/setup/: action.yaml
.github/workflows/: cdk-diff.yaml  deploy.yaml  pull-request.yaml  status-checks.yaml
infra/: stack.py
src/: stack.py
tests/: conftest.py
tests/infra/: test_stack.py
